Fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ input {
 	font-size: 50px;
 }
 
-#h .resume-container {
+#h .container .resume-container {
 	padding: 40px 0;
 }
 
@@ -257,60 +257,60 @@ input {
 }
 
 #h button a {
-    -moz-transition-delay: 0.2s;
-    -moz-transition: 0.45s;
-    -o-transition-delay: 0.2s;
-    -o-transition: 0.45s;
-    -webkit-transition-delay: 0.2s;
-    -webkit-transition: 0.45s;
-    transition-delay: 0.2s;
-    transition: 0.45s;
+  -moz-transition-delay: 0.2s;
+  -moz-transition: 0.45s;
+  -o-transition-delay: 0.2s;
+  -o-transition: 0.45s;
+  -webkit-transition-delay: 0.2s;
+  -webkit-transition: 0.45s;
+  transition-delay: 0.2s;
+  transition: 0.45s;
 }
 
 #h button:before,
 #h button:after {
-		font-size: 16px;
-    -moz-transition: .25s,opacity .45s;
-    -o-transition: .25s,opacity .45s;
-    -webkit-transition: .25s,opacity .45s;
-    content: '';
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    text-align: center;
-    transition: .25s,opacity .45s;
-    width: 100%;
+	font-size: 16px;
+  -moz-transition: .25s,opacity .45s;
+  -o-transition: .25s,opacity .45s;
+  -webkit-transition: .25s,opacity .45s;
+  content: '';
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  text-align: center;
+  transition: .25s,opacity .45s;
+  width: 100%;
 }
 
 #h button:before {
-    -moz-transform: translate(-150%,0);
-    -ms-transform: translate(-150%,0);
-    -o-transform: translate(-150%,0);
-    -webkit-transform: translate(-150%,0);
-    content: attr(data-hover);
-    transform: translate(-150%,0);
+  -moz-transform: translate(-150%,0);
+  -ms-transform: translate(-150%,0);
+  -o-transform: translate(-150%,0);
+  -webkit-transform: translate(-150%,0);
+  content: attr(data-hover);
+  transform: translate(-150%,0);
 }
 
 #h button:hover a {
-    -moz-transform: scale(0.3);
-    -ms-transform: scale(0.3);
-    -o-transform: scale(0.3);
-    -webkit-transform: scale(0.3);
-    opacity: 0;
-    transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  -ms-transform: scale(0.3);
+  -o-transform: scale(0.3);
+  -webkit-transform: scale(0.3);
+  opacity: 0;
+  transform: scale(0.3);
 }
 
 #h button:hover:before {
-    -moz-transform: translate(0,0);
-    -moz-transition-delay: .25s;
-    -ms-transform: translate(0,0);
-    -o-transform: translate(0,0);
-    -o-transition-delay: .25s;
-    -webkit-transform: translate(0,0);
-    -webkit-transition-delay: .25s;
-    opacity: 1;
-    transform: translate(0,0);
-    transition-delay: .25s;
+  -moz-transform: translate(0,0);
+  -moz-transition-delay: .25s;
+  -ms-transform: translate(0,0);
+  -o-transform: translate(0,0);
+  -o-transition-delay: .25s;
+  -webkit-transform: translate(0,0);
+  -webkit-transition-delay: .25s;
+  opacity: 1;
+  transform: translate(0,0);
+  transition-delay: .25s;
 }
 
 /* GREY SECTION */
